[metadata]
name = ntlm-auth
author = Jordan Borean
author_email = jborean93@gmail.com
license = MIT
license_file = LICENSE
description = Creates NTLM authentication structures
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    authentication
    auth
    microsoft
    ntlm
    lm
url = https://github.com/jborean93/ntlm-auth
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = ntlm_auth
install_requires =
    ordereddict; python_version<"2.7"
python_requires = >=2.6,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

[options.extras_require]
# Adds faster RC4 message encryption, optional as we can fallback
# to the slower Python imp.
# 2.2+ droppped Python 2.6 support
cryptography =
    cryptography<2.2; python_version<"2.7"
    cryptography; python_version>="2.7"

[bdist_wheel]
universal = 1

[tool:pytest]
pep8maxlinelength = 119
